# haskell-hindley-milner

./: README.md  hnra-hm.cabal
app/: Main.hs
src/: HindleyMilner.hs
