cabal-version:      2.4
name:               hnra-hm
version:            0.1.0.0
author:             Henrik Andersson
maintainer:         h@hnra.dev

library HindleyMilner
    exposed-modules:  HindleyMilner
    build-depends:
        base                    ^>=4.14.3.0,
        unordered-containers    >= 0.2.19 && < 0.3,
        transformers            >= 0.5.6 && < 0.6,
    hs-source-dirs:   src
    default-language: Haskell2010

executable hnra-hm
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        HindleyMilner,
    hs-source-dirs:   app
    default-language: Haskell2010
